fix: небольшой фикс

--- a/terra-ui.conf
+++ b/terra-ui.conf
@@ -4,15 +4,15 @@
    Minimalist Conky Config with Smart Weather & Spotify Integration
    Author: Tomato
    Font: Clash Display
-   Version: 1.0
+   Version: 2.3 (Color Fix & Dynamic Weather Restored)
 ============================================================================
 ]]
 
 conky.config = {
-    -- Настройки окна
+    -- Настройки окна (ИСПРАВЛЕНО: ARGB без transparent)
     own_window = true,
     own_window_type = 'desktop',
-    own_window_transparent = true,
+    own_window_transparent = false,
     own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
     own_window_colour = '#000000',
     own_window_argb_visual = true,
@@ -22,8 +22,8 @@ conky.config = {
     alignment = 'middle_middle',
     gap_x = 0,
     gap_y = 0,
-    minimum_width = 600,
-    minimum_height = 700,
+    minimum_width = 1500,
+    minimum_height = 800,
 
     -- Графика
     double_buffer = true,
@@ -34,24 +34,18 @@ conky.config = {
     -- Обновление
     update_interval = 1,
 
-    -- ЦВЕТА (Светлая гамма из прошлого шага)
-    color1 = '#E0987A', -- Светлый (Время и Погода)
-    color2 = '#A8532F', -- Темный (День недели)
+    -- ЦВЕТА
+    color1 = '#E0987A', -- Светлый
+    color2 = '#A8532F', -- Темный
 };
 
 conky.text = [[
 ${alignc}${voffset 40}${color1}${font Clash Display:weight=Medium:size=48}${time %H:%M}${font}
 ${voffset -40}${alignc}${color2}${font Clash Display:weight=Bold:size=170}${exec date +%a | tr '[:upper:]' '[:lower:]'}.${font}
-${voffset 40}${alignc}${color1}${font Clash Display:weight=Medium:size=48}${execi 600 python3 ./weather_smart.py}${font}
-${execp python3 ./system_rings.py}
-${goto 178}${voffset 90}${color1}${font Clash Display:weight=Bold:size=9}CPU${font}
-${goto 290}${voffset -17}${color1}${font Clash Display:weight=Bold:size=9}RAM${font}
-${goto 409}${voffset -17}${color1}${font Clash Display:weight=Bold:size=9}SSD${font}
-${goto 180}${voffset -61}${color1}${font Clash Display:weight=Medium:size=12}${cpu cpu0}%${font}
-${goto 290}${voffset -19}${color1}${font Clash Display:weight=Medium:size=12}${memperc}%${font}
-${goto 410}${voffset -19}${color1}${font Clash Display:weight=Medium:size=12}${fs_used_perc /}%${font}
+${voffset 60}${alignc}${color1}${font Clash Display:weight=Medium:size=48}${execi 600 python3 ./weather_smart.py}${font}
+
+${execpi 1 python3 ./system_rings.py}
 ${if_running spotify}
-${voffset 40}
-${execp python3 ./spotify_cover.py}
+${execpi 2 python3 ./spotify_cover.py}
 ${endif}
 ]];
