feat: добавил иконку погоды

--- a/terra-ui.conf
+++ b/terra-ui.conf
@@ -4,15 +4,15 @@
    Minimalist Conky Config with Smart Weather & Spotify Integration
    Author: Tomato
    Font: Clash Display
-   Version: 2.3 (Color Fix & Dynamic Weather Restored)
+   Version: 2.4 (Graphical Weather Icons)
 ============================================================================
 ]]
 
 conky.config = {
-    -- Настройки окна (ИСПРАВЛЕНО: ARGB без transparent)
+    -- Настройки окна
     own_window = true,
     own_window_type = 'desktop',
-    own_window_transparent = false,
+    own_window_transparent = true,
     own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
     own_window_colour = '#000000',
     own_window_argb_visual = true,
@@ -22,7 +22,7 @@ conky.config = {
     alignment = 'middle_middle',
     gap_x = 0,
     gap_y = 0,
-    minimum_width = 1500,
+    minimum_width = 900,
     minimum_height = 800,
 
     -- Графика
@@ -42,7 +42,8 @@ conky.config = {
 conky.text = [[
 ${alignc}${voffset 40}${color1}${font Clash Display:weight=Medium:size=48}${time %H:%M}${font}
 ${voffset -40}${alignc}${color2}${font Clash Display:weight=Bold:size=170}${exec date +%a | tr '[:upper:]' '[:lower:]'}.${font}
-${voffset 60}${alignc}${color1}${font Clash Display:weight=Medium:size=48}${execi 600 python3 ./weather_smart.py}${font}
+
+${execpi 600 python3 ./weather_smart.py}
 
 ${execpi 1 python3 ./system_rings.py}
 ${if_running spotify}
